Flat sidebar button, scrollbar transition fixes

--- a/Adwaita/gtk.css
+++ b/Adwaita/gtk.css
@@ -96,9 +96,12 @@ scrollbar {
   scrollbar:backdrop {
     transition: 200ms ease-out; }
   scrollbar slider {
-    transition: 200ms ease-out; }
+    transition: 200ms ease-out;
+    transition-property: min-height, min-width, color; }
   scrollbar button {
     transition-property: min-height, min-width, color; }
+  scrollbar.fine-tune slider {
+    transition: none; }
 
 scrolledwindow junction:backdrop {
   transition: 200ms ease-out; }
@@ -108,8 +111,6 @@ switch:backdrop {
 switch slider {
   transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition-property: background, border, box-shadow; }
-switch.fine-tune {
-  transition: none; }
 switch:backdrop slider {
   transition: 200ms ease-out; }
 
@@ -2409,7 +2410,15 @@ placessidebar row {
       color: #FFFFFF;
       background-color: shade(#33D17A, 0.8); }
 
-button.sidebar-button, button.sidebar-button:backdrop {
+button.sidebar-button {
+  border-color: transparent;
+  border-radius: 3px;
+  color: #2E3436;
+  background-color: transparent;
+  background-image: none;
+  box-shadow: none;
+  text-shadow: none;
+  -gtk-icon-shadow: none;
   min-width: 22px;
   min-height: 22px;
   margin-top: 2px;
@@ -2418,10 +2427,57 @@ button.sidebar-button, button.sidebar-button:backdrop {
   border-radius: 100%;
   color: #2E3436;
   -gtk-outline-radius: 100%; }
-button.sidebar-button:hover, button.sidebar-button:active {
-  color: #2E3436; }
-button.sidebar-button:not(:hover):not(:active) > image {
-  opacity: 0.5; }
+  button.sidebar-button:hover {
+    color: #2E3436;
+    border-color: shade(#E8E8E7, 0.8);
+    border-bottom-color: shade(shade(#E8E8E7, 0.8), 0.75);
+    background-color: #E8E8E7;
+    background-image: linear-gradient(to bottom, shade(#E8E8E7, 1.075), shade(#E8E8E7, 0.945));
+    box-shadow: inset 0 1px alpha(white, 0.5), inset 0 -1px alpha(black, 0.025);
+    text-shadow: 0 1px white;
+    -gtk-icon-shadow: 0 1px white; }
+  button.sidebar-button:active, button.sidebar-button:checked {
+    border-color: shade(#E8E8E7, 0.8);
+    background-color: shade(#E8E8E7, 0.9);
+    background-image: none;
+    box-shadow: none;
+    text-shadow: none;
+    -gtk-icon-shadow: none; }
+    button.sidebar-button:active:backdrop, button.sidebar-button:checked:backdrop {
+      border-color: shade(#E8E8E7, 0.85);
+      background-color: shade(#E8E8E7, 0.95);
+      background-image: none;
+      box-shadow: none;
+      text-shadow: none;
+      -gtk-icon-shadow: none; }
+  button.sidebar-button:disabled {
+    border-color: transparent;
+    color: shade(#E8E8E7, 0.55);
+    background-color: transparent;
+    background-image: none;
+    box-shadow: none;
+    text-shadow: none;
+    -gtk-icon-shadow: none; }
+    button.sidebar-button:disabled:backdrop {
+      border-color: transparent;
+      color: mix(#2E3436, #E8E8E7, 0.75);
+      background-color: transparent;
+      background-image: none;
+      box-shadow: none;
+      text-shadow: none;
+      -gtk-icon-shadow: none; }
+  button.sidebar-button:backdrop {
+    border-color: transparent;
+    color: mix(#E8E8E7, #2E3436, 0.5);
+    background-color: transparent;
+    background-image: none;
+    box-shadow: none;
+    text-shadow: none;
+    -gtk-icon-shadow: none; }
+  button.sidebar-button:hover, button.sidebar-button:active {
+    color: #2E3436; }
+  button.sidebar-button:not(:hover):not(:active) > image {
+    opacity: 0.5; }
 
 actionbar {
   padding: 4px;
