--- a/Adwaita/widgets/_sidebar.scss
+++ b/Adwaita/widgets/_sidebar.scss
@@ -105,16 +105,16 @@
   }
 
   button.sidebar-button {
-    &, &:backdrop {
-      min-width: 22px;
-      min-height: 22px;
-      margin-top: 2px;
-      margin-bottom: 2px;
-      padding: 0;
-      border-radius: 100%;
-      color: $sidebar_fg_color;
-      -gtk-outline-radius: 100%;
-    }
+    @include flat_buttons($bg_color, $fg_color, $borders);
+
+    min-width: 22px;
+    min-height: 22px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding: 0;
+    border-radius: 100%;
+    color: $sidebar_fg_color;
+    -gtk-outline-radius: 100%;
 
     &:hover, &:active { color: $fg_color; }
     &:not(:hover):not(:active) > image { opacity: 0.5; }
