--- a/Adwaita/widgets/_transitions.scss
+++ b/Adwaita/widgets/_transitions.scss
@@ -38,8 +38,10 @@
     transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
     &:backdrop { transition: 200ms ease-out; }
-    slider { transition: 200ms ease-out; }
+    slider { transition: 200ms ease-out; transition-property: min-height, min-width, color; }
     button { transition-property: min-height, min-width, color; }
+    
+    &.fine-tune slider { transition: none; }
   }
   
   scrolledwindow junction:backdrop { transition: 200ms ease-out; }
@@ -51,8 +53,6 @@
       transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
       transition-property: background, border, box-shadow;
     }
-    
-    &.fine-tune { transition: none; }
 
     &:backdrop slider { transition: 200ms ease-out; }
   }
